--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "axios": "^0.18.0",
+    "react-google-button": "^0.5.3",
     "react-markdown": "^3.6.0",
     "react-meta-tags": "^0.5.1",
     "react-redux": "^5.0.7",
+    "react-social-login-buttons": "^2.1.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.3.3",
