--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "demo": "node scripts/demo.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "publish-minor": "npm run build && git add . && git commit -m 'publish' && npm version patch && npm publish"
   },
   "homepage": "",
   "license": "MIT",
